--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,19 +1,44 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-body {
-    min-height: 100vh;
-    display: grid;
-    place-content: center;
-    font-size: 3em;
 
-    font-family: 'Poppins', sans-serif;
-    background-color: #f5f5f5;
-}
+
 
 h1, p {
     text-align: center;
 }
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #000;
+    padding: 10px 20px;
+    color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; /* Garante que a navbar fique acima do conteúdo */
+}
+nav h3 {
+    margin: 0;
+    margin-right: 20px;
+    font-size: 1.5rem;
+}
+
+nav a {
+    margin-right: 15px;
+    text-decoration: none;
+    color: #007bff;
+    font-size: 1rem;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+nav a:last-child {
+    margin-right: 0;
+}
+
+
+
