adicionado link para o app lirio dos vales na pagina principal

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
 
 {% block content %}
   <h1>olá mundo</h1>
+  <a href="{% url 'liriodosvales:home' %}">Lírio dos Vales</a>
 {% endblock content %}
 
 
