--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
   <main>
     <h1>olá mundo</h1>
     <a href="{% url 'liriodosvales:home' %}">Lírio dos Vales</a>
+    <a href="{% url 'consultas:lista_atendimentos' %}">Registro de Atendimento Médico</a>
   </main>
 
 {% endblock content %}
